changed extent settings

--- a/Step1_Data_Access.ipynb
+++ b/Step1_Data_Access.ipynb
@@ -53,35 +53,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77203bfb",
-   "metadata": {},
-   "source": [
-    "#### 2. Define your region of interest"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2400c7ce",
-   "metadata": {},
-   "source": [
-    "In the **Analysis** tab, select \"Environments\" in the Geoprocessing section. In the \"Processing Extent\", select \"As Specified Below\", and input the coordinates that you are interested in. \n",
-    "- need input from Keith here - how to set Extent and have it saved. I think what I'm doing is right but not sure."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dd1ce128",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/setextent.png\" style=\"height:400px\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "89ce6fab",
    "metadata": {},
    "source": [
-    "#### 3. Make Multidimensional Raster Layer"
+    "#### 2. Make Multidimensional Raster Layer"
    ]
   },
   {
@@ -89,7 +64,13 @@
    "id": "3c30d612",
    "metadata": {},
    "source": [
-    "Use the **Make Multidimensional Raster Layer** tool, with the netCDF file as your input file. Select the variable that you want to use in your layer (elevation). Since your extent has already been defined, the coordinates of the extent will automatically populate. You shoudl now be able to visualize the GEBCO output for your region of interest."
+    "Use the **Make Multidimensional Raster Layer** tool, with the netCDF file as your input file. <br>\n",
+    "Select the variable that you want to use in your layer (elevation). <br>\n",
+    "Under \"Extent\" is where you can define your region of interest. There are several ways of setting the extent: <br>\n",
+    "- Select \"As Specified Below\", and manually input the coordinates of your boundaries.\n",
+    "- Zoom to your region of interest in the map view, and then select \"Current Display Extent\".\n",
+    "\n",
+    "Once you've run this tool, you should be able to visualize the bathymetry output for your region of interest."
    ]
   },
   {
@@ -105,7 +86,7 @@
    "id": "3e12335a",
    "metadata": {},
    "source": [
-    "#### 4. Remove values above sea-level"
+    "#### 3. Remove values above sea-level"
    ]
   },
   {
@@ -132,7 +113,7 @@
    "id": "52c490ba",
    "metadata": {},
    "source": [
-    "#### 5. Convert raster to TIFF"
+    "#### 4. Convert raster to TIFF"
    ]
   },
   {
